--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,7 @@
     <h3>This is purely for personal dumb test.</br>Look at console.</h3>
     <script type="text/javascript" src='../build/build.js'></script>
     <script type="text/javascript">
-  
+
       var Throttled = require('throttled');
       var throttled = new Throttled(); // Probably better to be used as singleton.
 
@@ -32,8 +32,7 @@
         console.log('clean resize');
       });
 
-
-      // If you don't want this anymore.
+      // If you don’t want this anymore.
       throttled.destroy();
 
     </script>
