--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,10 @@
         console.log('clean resize');
       });
 
+      throttled.on('wheel', function(){
+        console.log('clean wheel');
+      });
+
     </script>
   </body>
 </html>
